# ComfyUI-dapaoAPI

./: .gitignore  CHANGELOG_GEMINI3.md  CLAUDE.md  LICENSE  PUBLISH_GUIDE.md  QUICK_START_GEMINI3.md  README.md  RELEASE_CHECKLIST.md  UPDATE_SUMMARY.md  __init__.py  apimart_multimodal_chat_node.py  apimart_seedance2_node.py  banana2_aabao_node.py  banana2_config.example.json  banana2_config.json  banana2_flash_zhenzhen_node.py  banana2_nodes.py  banana2_zhenzhen_node.py  banana_integrated_node.py  config.example.json  dapao_api_batch_reverse_node.py  dapao_compare_tagging_node.py  dapao_ecommerce_node.py  dapao_template_adapter.py  dapao_template_node.py  dapao_user_templates.json  dapao_user_templates_manager.py  debug_init.py  debug_node_registration.py  doubao_chat_node.py  doubao_config.example.json  doubao_seedance2_node.py  doubao_video_node.py  gemini3_client.py  gemini3_config.example.json  gemini3_config.json  gemini3_file_client.py  gemini3_multimodal_chat_node.py  gemini3_nodes.py  gemini_image_apimart_node.py  (+49 more)
docs/: 1-Seedream文生图使用说明.md  2-Seedream多图编辑使用说明.md  3-GLM图像反推使用说明.md  4-GLM提示词润色使用说明.md  5-豆包LLM对话使用说明.md  6-智谱LLM对话使用说明.md  7-豆包图像反推使用说明.md  9-Sora2视频生成使用说明.md  banana2_usage.md  gemini3_video_audio_guide.md  seedream45_guide.md
example_workflows/: GPT-image2 真4K支持！ 第三方调用 最低仅需4分钱.json  gemini3智能对话.json  【推荐】—谷歌+贞贞 大香蕉banana最完美融合节点.json  大炮API 全系常用节点整理 Gemini反推+香蕉全系+grok 30秒多图参考 26-04-16.json  大炮API-GPT-image2全系功能 好好看注释使用说明.json  大炮API全系功能【豆包API和智谱】.json  通用图像编辑 可适配任何图像编辑模型API【支持banana4K直出！】.json  🌐 通用API调用（测试）适合多模特智能对话.json
web/: appearance.js
(+20 files in other folders)
