[project]
name = "ComfyUI-dapaoAPI"
description = "ComfyUI custom nodes collection by PaoLaoShi - including mask enhancement, prompt processing, image layout, Janus and Doubao image-to-prompt, BEN2 background removal"
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/paolaoshi/ComfyUI-dapaoAPI"

[tool.comfy]
PublisherId = "paolaoshi"
DisplayName = "ComfyUI-dapaoAPI"
Icon = ""
Banner = ""

