[project]
name = "ComfyUI-dapaoAPI"
description = "dapaoAPI 是一套为 ComfyUI 设计的高质量自定义节点集合，整合了 火山引擎 Seedream 4.0、智谱 AI（GLM） 和 字节跳动豆包 等主流 AI 服务，提供从图像生成、图像分析到文本处理的完整工作流支持。"
version = "1.0.5"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/paolaoshi/ComfyUI-dapaoAPI"

[tool.comfy]
PublisherId = "paolaoshi"
DisplayName = "ComfyUI-dapaoAPI"
Icon = ""
Banner = ""

